--- a/DataStructure/数据结构/栈.md
+++ b/DataStructure/数据结构/栈.md
@@ -10,7 +10,13 @@
 
 　　从栈顶删除一个元素称之为出栈（pop）。
 
+　　栈是限定仅在表尾进行插入和删除操作的线性表。
 
+　　允许插入和删除的一段称为栈顶（top），另一端称为栈底（bottom），不含任何数据元素的栈称为空栈。栈又称为后进先出的线性表。
+
+　　栈：受约束的线性表。只允许栈顶元素入栈和出栈。
+
+![](image/栈.png)
 
 　
 
@@ -46,8 +52,10 @@ void clear()
 
 　　因为栈也是一个线性表，顺序存储实现一个栈也很简单。
 
-```
+![](image/栈顺序.png)
 
+```
+数据结构与算法（三）栈和 Java Stack 源码分析
 ```
 
 
@@ -55,7 +63,7 @@ void clear()
 ## 链式存储实现栈
 
 ```
-
+数据结构与算法（三）栈和 Java Stack 源码分析
 ```
 
 　　这里的 stackTop 就相当于以前介绍链表时候的 tail。
@@ -87,7 +95,7 @@ void clear()
 　　这个问题通过 Stack 很好解决，先把输入的字符串转换程字符数组，遍历字符数组，如果当前字符是左括号 '('、'{'、'[' 都 push 到栈中，如果当前字符是 ')'，则 pop 栈顶元素是否是 '('，如果当前字符是 '}' 则 pop 栈顶元素是否是 '{'，如果当前字符是 ']' 则 pop 栈顶元素是否是 '['，具体代码如下：
 
 ```
-
+数据结构与算法（三）栈和 Java Stack 源码分析
 ```
 
 ### Dijkastra 双栈算术表达式求值
@@ -99,7 +107,7 @@ void clear()
 　　为了简单区间，把数字和操作符用空格分开，这样便于把字符串进行分割。代码如下：
 
 ```
-
+数据结构与算法（三）栈和 Java Stack 源码分析
 ```
 
 ## 参考文章
@@ -107,7 +115,6 @@ void clear()
 1. [数据结构与算法（三）栈和 Java Stack 源码分析](https://chiclaim.blog.csdn.net/article/details/80373290)
 
 2. [从零开始学数据结构和算法(三)栈与栈的应用](https://juejin.im/post/5c9453965188252db02e4be6)
-3. [数据结构--知识点总结--栈和队列](https://blog.csdn.net/void_worker/article/details/80920099)
 
    
 
