--- a/DataStructure/算法/分支定界法.md
+++ b/DataStructure/算法/分支定界法.md
@@ -24,7 +24,17 @@
 
 ## 回溯法与分支限界法的一些区别
 
+　　有一些问题其实无论用回溯法还是分支限界法都可以得到很好的解决，但是另外一些则不然。也许需要具体一些的分析 -- 到底何时使用分支限界而何时使用回溯呢？
 
+　　回溯法和分支限界法的一些区别：
+
+* 方法对解空间树的搜索方式
+* 存储结点的常用数据结构
+* 结点存储特性常用应用
+
+　　回溯法深度优先搜索堆栈活结点的所有可行子节点被遍历后才被从栈中弹出找出满足约束条件的所有解。
+
+　　分支限界法广度优先或最小消耗优先搜索队列、优先队列每个结点只有依次成为活结点的机会找出满足约束条件的一个解或特定意义下的最优解。
 
 ## 参考文章
 
