--- a/DataStructure/算法/排序算法/冒泡排序.md
+++ b/DataStructure/算法/排序算法/冒泡排序.md
@@ -39,11 +39,45 @@
 
 ## 代码实现
 
+```java
+/**
+ * 冒泡排序
+ */
+public class BubbleSort {
+    public static void sort(int[] array) {
+        // 用于标记是否已经排好了序
+        boolean flag = true;
+
+        for (int i = 0; i < array.length - 1 && flag; i++) {
+            flag = false;
+            for (int j = 0; j < array.length - 1 - i; j++) {
+                if (array[j] > array[j + 1]) {
+                    int temp = array[j];
+                    array[j] = array[j + 1];
+                    array[j + 1] = temp;
+                    flag = true;
+                }
+            }
+        }
+    }
+}
 ```
 
+　　测试：
+
+```java
+    public static void main(String[] args) {
+        int a[] = new int[]{9, 1, 2, 7, 4, 8, 6, 3, 5};
+        sort(a);
+        System.out.println("a:" + Arrays.toString(a));
+    }
 ```
 
+　　输出：
 
+```java
+a:[1, 2, 3, 4, 5, 6, 7, 8, 9]
+```
 
 ## 总结与思考
 
