--- a/DataStructure/算法/排序算法/堆排序.md
+++ b/DataStructure/算法/排序算法/堆排序.md
@@ -38,8 +38,65 @@
 * 父节点 i 的右子节点在位置：（2*i+2）
 * 子节点 i 的父节点在位置：floor((i-1)/2)
 
+```java
+/**
+ * 堆排序
+ */
+public class HeapSort {
+
+    public static void sort(int[] a) {
+        for (int i = a.length - 1; i > 0; i--) {
+            max_heapify(a, i);
+            //栈顶元素（第一个元素）与 Kn 交换
+            int temp = a[0];
+            a[0] = a[i];
+            a[i] = temp;
+        }
+    }
+
+    /**
+     * 将数组堆化
+     * i = 第一个非叶子节点
+     * 从第一个非叶子节点开始即可，无需从最后一个叶子结点开始。
+     * 叶子结点可以看作易符合堆要求的结点，根节点就是它自己且自己以下值为最大。
+     *
+     * @param a
+     * @param n
+     */
+    public static void max_heapify(int[] a, int n) {
+        int child;
+        for (int i = (n - 1) / 2; i >= 0; i--) {
+            // 左子节点位置
+            child = 2 * i + 1;
+            // 右子节点存在且大于左子结点，child 变成右子节点
+            if (child != n && a[child] < a[child + 1]) {
+                child++;
+            }
+            // 交换父节点与左右子节点重的最大值
+            if (a[i] < a[child]) {
+                int temp = a[i];
+                a[i] = a[child];
+                a[child] = temp;
+            }
+        }
+    }
+}
 ```
 
+　　测试：
+
+```java
+    public static void main(String[] args) {
+        int a[] = new int[]{9, 1, 2, 7, 4, 8, 6, 3, 5};
+        sort(a);
+        System.out.println("a:" + Arrays.toString(a));
+    }
+```
+
+　　输出：
+
+```java
+a:[1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
 
 ## 复杂度分析
