--- a/DataStructure/算法/排序算法/快速排序.md
+++ b/DataStructure/算法/排序算法/快速排序.md
@@ -85,8 +85,62 @@
 
 #### 代码实现
 
+```java
+/**
+ * 快速排序
+ */
+public class QuickSort {
+
+    public static void sort(int[] a, int low, int high) {
+        // 已经排完
+        if (low >= high) {
+            return;
+        }
+        int left = low;
+        int right = high;
+        // 保存基准位置
+        int pivot = left;
+        while (left < right) {
+            // 从后往前找到比基准小的元素
+            while (left < right && a[right] >= a[pivot]) {
+                right--;
+            }
+            // 从前往后找到比基准大的元素
+            while (left < right && a[left] <= a[pivot]) {
+                left++;
+            }
+            if (left < right) {
+                int temp = a[left];
+                a[left] = a[right];
+                a[right] = temp;
+            }
+        }
+        // 放值基准值
+        int temp = a[left];
+        a[left] = a[pivot];
+        a[pivot] = temp;
+        // 分支递归快排
+        sort(a, low, left - 1);
+        sort(a, left + 1, high);
+    }
+
+}
 ```
 
+　　测试：
+
+```java
+    public static void main(String[] args) {
+        int a[] = new int[]{9, 1, 2, 7, 4, 8, 6, 3, 5};
+        sort(a, 0, a.length - 1);
+        System.out.println("a:" + Arrays.toString(a));
+    }
+```
+
+　　输出：
+
+```java
+a:[1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
 
 ## 复杂度分析
