--- a/DataStructure/算法/排序算法/直接插入排序.md
+++ b/DataStructure/算法/排序算法/直接插入排序.md
@@ -27,8 +27,65 @@
 
 ## 代码实现
 
+```java
+/**
+ * 直接插入排序
+ */
+public class InsertSort {
+
+    /**
+     * 通过交换进行插入排序，借鉴冒泡排序
+     *
+     * @param a
+     */
+    public static void sort(int[] a) {
+        for (int i = 0; i < a.length - 1; i++) {
+            for (int j = i + 1; j > 0; j--) {
+                if (a[j] < a[j - 1]) {
+                    int temp = a[j];
+                    a[j] = a[j - 1];
+                    a[j - 1] = temp;
+                }
+            }
+        }
+    }
+
+    /**
+     * 通过将较大的元素都向右移动而不总是交换两个元素
+     *
+     * @param a
+     */
+    public static void sort2(int[] a) {
+        for (int i = 1; i < a.length; i++) {
+            int num = a[i];
+            int j;
+            for (j = i; j > 0 && num < a[j - 1]; j--) {
+                a[j] = a[j - 1];
+            }
+            a[j] = num;
+        }
+    }
+}
 ```
 
+　　测试：
+
+```java
+    public static void main(String[] args) {
+        int a1[] = new int[]{9, 1, 2, 7, 4, 8, 6, 3, 5};
+        sort(a1);
+        System.out.println("sort a1:" + Arrays.toString(a1));
+        int a2[] = new int[]{9, 1, 2, 7, 4, 8, 6, 3, 5};
+        sort2(a2);
+        System.out.println("sort2 a2:" + Arrays.toString(a2));
+    }
+```
+
+　　输出：
+
+```java
+sort a1:[1, 2, 3, 4, 5, 6, 7, 8, 9]
+sort2 a2:[1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
 
 ## 复杂度分析
