--- a/DataStructure/算法/排序算法/简单选择排序.md
+++ b/DataStructure/算法/排序算法/简单选择排序.md
@@ -28,8 +28,50 @@
 
 ## 代码实现
 
+```java
+/**
+ * 简单选择排序
+ */
+public class SelectionSort {
+
+    public static void sort(int[] a) {
+        for (int i = 0; i < a.length; i++) {
+            int min = i;
+            // 选出之后待排序中值最小的位置
+            for (int j = i + 1; j < a.length; j++) {
+                if (a[j] < a[min]) {
+                    min = j;
+                }
+            }
+
+            //最小值不等于当前值时进行交换
+            if (min != i) {
+                int temp = a[i];
+                a[i] = a[min];
+                a[min] = temp;
+            }
+
+        }
+    }
+
+}
+
 ```
 
+　　测试：
+
+```java
+    public static void main(String[] args) {
+        int a[] = new int[]{9, 1, 2, 7, 4, 8, 6, 3, 5};
+        sort(a);
+        System.out.println("a:" + Arrays.toString(a));
+    }
+```
+
+　　输出：
+
+```java
+a:[1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
 
 ## 复杂度分析
