--- a/DataStructure/算法/递归.md
+++ b/DataStructure/算法/递归.md
@@ -2,7 +2,11 @@
 
 ## 1. 递归的基本概念
 
+　　程序调用自身的编程技巧称为递归（recursion）。
+
 　　在计算机科学领域中，递归是通过函数调用本身来实现的。每次成功调用都使得问题的答案范围越来越小，越来越接近问题的答案。
+
+　　递归作为一种算法在程序设计语言中广泛应用。一个过程或函数在其定义或说明中有直接或间接调用自身的一种方法，它通常把一个大型复杂的问题层层转化为一个与原问题相似的规模较小的问题来求解，递归策略只需少量的程序就可描述出解题过程所需要的多次重复计算，大大地减少了程序的代码量。递归的能力在于用优先的语句来定义对象的无限集合。一般来说，递归需要有边界条件、递归前进段和递归返回段。当边界条件不满足时，递归前进；当边界条件满足时，递归返回。
 
 　　下面来看一下一个简单经典的递归程序：给定一个正整数 n，求 n 的阶乘。
 
@@ -219,7 +223,64 @@ unsigned fac_tailrec(unsigned acc, unsigned n) {
     }
 ```
 
-## 5. 参考文章
+## 5. 经典递归算法 - 汉罗塔算法
+
+　　需求：A 放入 N 个盘中，并且盘子在柱子中从大到小依次向上小盘子不能在大盘子上，求把 A 中的盘子移动到 C 中最少移动几次，如何移动。注意每次只能一个。
+
+　　分析：汉诺塔问题就是把 A 柱上的 N-1 个盘子经过 C 移动到 B，再把 A 上的最大的盘子移到 C，而 B 上的 N-1 在类似上述步骤递归循环以到 C 上。
+
+　　动画演示：
+
+![](image/汉诺塔.gif)
+
+　　代码：
+
+```java
+/**
+ * 汉诺塔算法
+ */
+public class Hanoi {
+
+    private static void move(String a, String c) {
+        System.out.println("从" + a + "到" + c);
+    }
+
+    public static void hanoi(int n, String a, String b, String c) {
+        if (n == 1) {
+            move(a, c);
+        } else {
+            // 从 A 移到 B
+            hanoi(n - 1, a, c, b);
+            move(a, c);
+            // 从 B 移到 C
+            hanoi(n - 1, b, a, c);
+        }
+    }
+}
+```
+
+　　测试：
+
+```java
+    public static void main(String[] args) {
+        hanoi(3, "A", "B", "C");
+    }
+```
+
+　　输出：
+
+```java
+从A到C
+从A到B
+从C到B
+从A到C
+从B到A
+从B到C
+从A到C
+```
+
+## 6. 参考文章
 
 1. [数据结构与算法（五）深入理解递归](https://chiclaim.blog.csdn.net/article/details/80536238)
+2. [从零开始学数据结构和算法(三)栈与栈的应用](https://juejin.im/post/6844903801959219208)
 
