--- a/DataStructure/数据结构/堆.md
+++ b/DataStructure/数据结构/堆.md
@@ -2,7 +2,7 @@
 
 　　优先队列通常是使用二叉堆来实现的，接下来先介绍一下二叉堆。
 
-## 二叉堆的基本概念
+## 1. 二叉堆的基本概念
 
 　　二叉堆（binary heap）是一个由二叉树组织的堆数据结构。二叉堆是 J.W.J.Williams 于 1964 提出的用于堆排序的数据结构。
 
@@ -33,9 +33,9 @@
 * 获取某个索引的左子节点索引公式为：index*2
 * 获取某个索引的右子节点索引公式为：index*2+1
 
-## 二叉堆的基本操作
+## 2. 二叉堆的基本操作
 
-### 插入（Insert）
+### 2.1. 插入（Insert）
 
 　　执行插入操作需要对二叉堆执行 siftUp 操作（也称为 bubble-ip、percolate-up、up-heap、trickle-up、heapify-up、cascade-up），下面以大顶堆为例图解下 siftUp 的流程 ：
 
@@ -57,9 +57,9 @@
 
 　　当前的二叉树就符合二叉堆的性质了，这样就完成了整个 siftUp 操作。
 
-　　据上所述，siftUp 操作就是现在二叉堆尾部添加元素，然后新插入的元素和父节点对比，如果不符合二叉堆特性久可父节点交换位置，然后让交换后的位置继续和它的父节点对比，直到符合二叉堆的特性。
+　　据上所述，siftUp 操作就是现在二叉堆尾部添加元素，然后新插入的元素和父节点对比，如果不符合二叉堆特性就可与父节点交换位置，然后让交换后的位置继续和它的父节点对比，直到符合二叉堆的特性。
 
-### 移除堆顶元素（Extract）
+### 2.2. 移除堆顶元素（Extract）
 
 　　移除堆顶元素需要对二叉堆进行 siftDown 操作（也称为 bubble-down、percolate-down、sift-down、trickle-down、heapity-down、cascade-down、extract-min/max）。
 
@@ -79,14 +79,14 @@
 
 　　据上所述，siftDown 操作是让新的根节点往下和它的左右节点对比，如果不符合二叉堆特性则交换位置，然后让交换后的位置继续和它的左右子节点对比，直到符合二叉堆的特性。
 
-### 数组转成二叉堆（Heapify）
+### 2.3. 数组转成二叉堆（Heapify）
 
 　　把一个数组转成二叉堆有两种方法：
 
 1. 对每个元素 add 进二叉堆
 2. 堆数据进行 heapify 操作
 
-　　堆每个元素 add 进二叉堆很简单，只要遍历数据，然后调用二叉堆的 add 方法即可。
+　　每个元素 add 进二叉堆很简单，只要遍历数据，然后调用二叉堆的 add 方法即可。
 
 　　heapify 操作主要是把数组当成二叉堆，然后对二叉堆的非叶子节点（从二叉堆的最后一个非叶节点开始）进行 siftDown 操作。
 
@@ -124,7 +124,7 @@
 
 　　最终完成了 heapify 操作。
 
-## 构建大顶堆和小顶堆
+## 3. 构建大顶堆和小顶堆
 
 ```java
 /**
@@ -185,8 +185,10 @@ public class MaxHeap<T extends Comparable<T>> {
     public void add(T element) {
         data[size++] = element;
         if (size == data.length) {
+          	// 扩容
             doubleCapacity();
         }
+      	// siftUp 操作
         siftUp(size - 1);
     }
 
@@ -204,6 +206,7 @@ public class MaxHeap<T extends Comparable<T>> {
         int parentIndex;
         // 如果当前的节点比父节点要大
         while (index > 0 && data[index].compareTo(data[parentIndex = getParent(index)]) > 0) {
+        		// 向上交换  
             swap(index, parentIndex);
             index = parentIndex;
         }
@@ -219,8 +222,10 @@ public class MaxHeap<T extends Comparable<T>> {
             throw new NoSuchElementException();
         }
         T delete = getMax();
+      	// 与最后一个节点交换
         swap(0, size - 1);
         data[--size] = null;
+      	// siftDown 操作
         siftDown(0);
         return delete;
     }
@@ -233,6 +238,7 @@ public class MaxHeap<T extends Comparable<T>> {
             if (left + 1 < size && data[left + 1].compareTo(data[left]) > 0) {
                 max = left + 1;
             }
+          	// 当前节点小于左右节点
             if (data[max].compareTo(data[index]) <= 0) {
                 break;
             }
@@ -279,15 +285,15 @@ without heapify: 46.96635561 sec
 with    heapify: 2.81621934 sec
 ```
 
-　　实现大顶堆和小顶堆的主要逻辑是一样的，主要在大顶堆的基础上对 siftUp 和 siftDown 的时候判断条件改下即可。例如如果是要构成小顶堆。siftDown 的条件是当前结点比父节点小；siftDown 的条件是当前结点比它的子节点要大。
+　　实现大顶堆和小顶堆的主要逻辑是一样的，主要在大顶堆的基础上对 siftUp 和 siftDown 的时候判断条件改下即可。例如如果是要构成小顶堆，siftUp 的条件是当前结点比父节点小，siftDown 的条件是当前结点比它的子节点要大。
 
-## 优先队列的基本概念
+## 4. 优先队列的基本概念
 
 　　优先队列首先也是一个队列。普通的队列是先进先出，优先队列不一样，优先队列出队的时候让优先级高的先出队。然后，也可以把普通的队列当做一个优先队列来看，先入队的优先级高。
 
 　　这样的话，可以通过二叉堆来很方便的实现一个优先队列。
 
-## 实现一个优先队列
+## 5. 实现一个优先队列
 
 　　上面实现了二叉堆，基于二叉堆可以非常方便的实现优先队列。
 
@@ -308,7 +314,7 @@ public interface IQueue<T> {
  * @param <T>
  */
 public class PriorityQueue<T extends Comparable<T>> implements IQueue<T> {
-
+		// 大顶堆
     private MaxHeap<T> maxHeap;
 
     public PriorityQueue() {
@@ -355,27 +361,27 @@ public class PriorityQueue<T extends Comparable<T>> implements IQueue<T> {
 
 　　如果用小顶堆的话，定义成绩高的反而优先级低，这样的话在 siftDown 和 siftUp 的时候能让成绩高的在顶堆。
 
-## Java PriorityQueue 源码分析
+## 6. Java PriorityQueue 源码分析
 
-　　Java 里的 PriorityQueue 也是基于二叉堆实现的，和上面的实现方式很像。如果已经掌握了上面的二叉堆，对于 Java PriorityQueue 的掌握是很简单的，没有特别简单阐明的技术点。
+　　Java 里的 PriorityQueue 也是基于二叉堆实现的，和上面的实现方式很像。如果已经掌握了上面的二叉堆，对于 Java PriorityQueue 的掌握是很简单的。
 
-　　主要也是构造方法中队集合进行 heapify 操作：
+　　主要也是构造方法中对集合进行 heapify 操作：
 
 ```java
 public PriorityQueue(Collection<? extends E> c) {
-	//如果是已经排好序的 Set
+	// 如果是已经排好序的 Set
 	if (c instanceof SortedSet<?>) {
 		SortedSet<? extends E> ss = (SortedSet<? extends E>) c;
 		this.comparator = (Comparator<? super E>) ss.comparator();
 		initElementsFromCollection(ss);
 	}
-	//如果参数本身就是 PriorityQueue
+	// 如果参数本身就是 PriorityQueue
 	else if (c instanceof PriorityQueue<?>) {
 		PriorityQueue<? extends E> pq = (PriorityQueue<? extends E>) c;
 		this.comparator = (Comparator<? super E>) pq.comparator();
 		initFromPriorityQueue(pq);
 	}
-	//其他情况均通过 heapify 初始化数据
+	// 其他情况均通过 heapify 初始化数据
 	else {
 		this.comparator = null;
 		initFromCollection(c);
@@ -428,7 +434,7 @@ public E poll() {
 
 　　上面实现的二叉堆要么是大顶堆，要么是小顶堆，Java PriorityQueue 支持传递比较器，所以它支持通过定制比较器（Comparator），把 Java PriorityQueue 构造成一个大顶堆，这样更加灵活的定制优先级。
 
-## 参考文章
+## 7. 参考文章
 
-14. [数据结构与算法（六）二叉堆、优先队列和 Java PriorityQueue](https://chiclaim.blog.csdn.net/article/details/80550279)
+1. [数据结构与算法（六）二叉堆、优先队列和 Java PriorityQueue](https://chiclaim.blog.csdn.net/article/details/80550279)
 
