--- a/DataStructure/数据结构/线性表链式存储.md
+++ b/DataStructure/数据结构/线性表链式存储.md
@@ -800,22 +800,22 @@ public class DuplexLinkedList<T> implements List<T> {
 
 　　JDK LinkedList 底层也是用链表实现的，LinkedList 还是个双端队列（既可以当作栈使用，也可以当作队列使用）。
 
-## 学习例子
+## 4. 学习例子
 
-### 基于系统 API LinkedList 将麻将进行分组排序
+### 4.1. 基于系统 API LinkedList 将麻将进行分组排序
 
-#### 思想
+#### 4.1.1. 思想
 
 ![](image/麻将分组.png)
 
-#### 逻辑步骤
+#### 4.1.2. 逻辑步骤
 
-1. 把所有的点数分别装入到对应的链表组中。
-2. 再把链表中所有的点数合并在一起
-3. 再把所有的点数分别装在对应的链表中
-4. 最后把对应的点数链表装在一个新的集合中
+1. 先根据点数把所有的点数分别装入到对应的链表组中。
+2. 再把链表中所有的点数合并在一起。
+3. 再根据花色把所有的点数分别装在对应的链表中。
+4. 最后把对应的点数链表装在一个新的集合中。
 
-#### 代码编写
+#### 4.1.3. 代码编写
 
 ```java
 /**
@@ -849,7 +849,7 @@ public class ManjongSort {
         // 1. 先把所有的点数分别装入到对应的链表组中
         // 创建一个点数最大的为 9 的集合
         LinkedList[] linkedList = new LinkedList[9];
-        // 先初始化这 9 个链表目的是妆所有的对应的点数
+        // 先初始化这 9 个链表目的是装所有的对应的点数
         for (int i = 0; i < 9; i++) {
             linkedList[i] = new LinkedList();
         }
@@ -915,17 +915,17 @@ list:[Mahjong{suit=1, rank=1}, Mahjong{suit=1, rank=5}, Mahjong{suit=1, rank=6},
 
 ```
 
-#### 应用
+#### 4.1.4. 应用
 
 　　数据量几十个，插入操作多的情况。
 
-### 编写双向链表 LinkedList CURD
+### 4.2. 编写双向链表 LinkedList CURD
 
-#### 参考图解
+#### 4.2.1. 参考图解
 
 ![](image/双向链表.png)
 
-#### 编写代码
+#### 4.2.2. 编写代码
 
 ```java
 /**
@@ -1178,7 +1178,7 @@ public class CustomLinkedList<E> {
 
 ```
 
-#### 测试代码
+#### 4.2.3. 测试代码
 
 ```java
     public static void main(String[] args) {
@@ -1213,7 +1213,7 @@ public class CustomLinkedList<E> {
     }
 ```
 
-#### 测试结果
+#### 4.2.4. 测试结果
 
 ```java
 --CustomLinkedList--CustomLinkedList 0
@@ -1236,7 +1236,9 @@ public class CustomLinkedList<E> {
 --CustomLinkedList--CustomLinkedList 89
 ```
 
-### 编写简单的 ArrayList CURD
+### 4.3. 编写简单的 ArrayList CURD
+
+#### 4.3.1. 编写代码
 
 ```java
 /**
@@ -1358,7 +1360,7 @@ public class CustomArrayList<E> {
 
 ```
 
-#### 测试代码
+#### 4.3.2. 测试代码
 
 ```java
     public static void main(String[] args) {
@@ -1372,15 +1374,19 @@ public class CustomArrayList<E> {
     }
 ```
 
-#### 测试结果
+#### 4.3.3. 测试结果
 
 ```java
 arrayList：CustomArrayList{size=5，elementData=[1, 33, 45, 8, 96, null, null, null, null, null]}
 ```
 
-### 编写单向链表结构的 CURD
+### 4.4. 编写单向链表结构的 CURD
+
+#### 4.4.1. 参考图解
 
 ![](image/单向链表.png)
+
+#### 4.4.2. 编写代码
 
 ```java
 /**
@@ -1515,7 +1521,7 @@ public class SingleLinked<T> {
 
 ```
 
-#### 测试代码
+#### 4.4.3. 测试代码
 
 ```java
     public static void main(String[] args) {
@@ -1534,14 +1540,14 @@ public class SingleLinked<T> {
     }
 ```
 
-#### 测试结果
+#### 4.4.4. 测试结果
 
 ```java
 22=>2=>77=>6=>43=>76=>89=>
 remove 3:22=>2=>6=>43=>76=>89=>
 ```
 
-## 4. 参考文章
+## 5. 参考文章
 
 1. [数据结构与算法（二）线性表之链式存储和 LinkedList 实现](https://chiclaim.blog.csdn.net/article/details/80351584)
 2. [从零开始学数据结构和算法(二)线性表的链式存储结构](https://juejin.im/post/5c9449dd5188252da22508e3)
