--- a/DataStructure/算法/排序算法/基数排序.md
+++ b/DataStructure/算法/排序算法/基数排序.md
@@ -1,12 +1,12 @@
 #  基数排序
 
-　　基数排序的发明可以追溯到 1887 年赫尔曼·何乐礼在打卡片制表机（Tabulation Machine），排序器每次只能看到一个列。它是基于元素值得每个位上的字符来排序的。对于数字而言就是分别基于个位、十位、百位或千位等等数字来排序。
+　　基数排序的发明可以追溯到 1887 年赫尔曼·何乐礼在打卡片制表机（Tabulation Machine），排序器每次只能看到一个列。它是基于元素值的每个位上的字符来排序的。对于数字而言就是分别基于个位、十位、百位或千位等等数字来排序。
 
 　　基数排序（Radix sort）是一种非比较型整数排序算法，其原理是将整数按位数切割成不同的数字，然后按每个位数分别比较。由于整数也可以表达字符串（比如名字或日期）和特定格式的浮点数，所以基数排序也不是只能使用于整数。
 
-## 基本思想
+## 1. 基本思想
 
-　　它是这样实现的：将所有待比较数值（正整数）同意为同样的数位长度，数位较短的数前面补零。然后，从最低位开始，一次进行一次排序。这样从最低位排序一直到最高位排序完成以后，数列就变成一个有序序列。
+　　它是这样实现的：将所有待比较数值（正整数）统一为同样的数位长度，数位较短的数前面补零。然后，从最低位开始，依次进行一次排序。这样从最低位排序一直到最高位排序完成以后，数列就变成一个有序序列。
 
 　　基数排序按照优先从高位或低位来排序有两种实现方案：
 
@@ -15,15 +15,15 @@
 
 ![](image/基数排序.gif)
 
-## 算法描述
+## 2. 算法描述
 
 　　以 LSD 为例，从最低位开始，具体算法描述如下：
 
-1. 取得数组中的最大数，并取的位数；
+1. 取得数组中的最大数，并取得位数；
 2. arr 为原始数组，从最低位开始取每个位组成 radix 数组；
 3. 对 radix 进行计数排序（利用计数排序使用于小范围数的特点）；
 
-## 代码实现
+## 3. 代码实现
 
 　　基数排序：通过序列中各个元素的值，对排序的 N 个元素进行若干趟的 “ 分配 ” 与 “ 收集 ” 来实现排序。
 
@@ -63,7 +63,7 @@ public class CardinalSort {
             for (int j = 0; j < arr.length; j++) {
                 // 取得第低 base 1 位的值,比如 arr[j] = 123，base 为 100,则 whichBucket = 2
                 int whichBucket = (arr[j] % base) / (base / 10);
-                //将这个数放入到第 whichBucket 的桶的顶部
+                // 将这个数放入到第 whichBucket 的桶的顶部
                 buckets[whichBucket][bktLen[whichBucket]] = arr[j];
                 bktLen[whichBucket]++;
             }
@@ -98,7 +98,7 @@ Sorting:[2, 5, 27, 33, 76, 199, 451, 654, 1238]
 a:[2, 5, 27, 33, 76, 199, 451, 654, 1238]
 ```
 
-## 复杂度分析
+## 4. 复杂度分析
 
 　　以下是基数排序算法复杂度，其中 k 为最大数的位数：
 
@@ -108,13 +108,13 @@ a:[2, 5, 27, 33, 76, 199, 451, 654, 1238]
 
 　　其中，d 为位数，r 为基数，n 为原数组个数。在基数排序中，因为没有比较操作，所以在复杂上，最好的情况与最坏的情况在时间上是一致的，均为 O(d*(n+r))。
 
-## 总结和思考
+## 5. 总结和思考
 
 　　基数排序更适合用于对时间、字符串等这些整体权值未知的数据进行排序。
 
 　　基数排序不改变相同元素之间的相对顺序，因此它是稳定的排序算法。
 
-### 基数排序 vs 计数排序 vs 桶排序
+### 5.1. 基数排序 vs 计数排序 vs 桶排序
 
 　　这三种排序算法都利用了桶的概念，但对桶的使用方法上由明显差异：
 
@@ -122,9 +122,7 @@ a:[2, 5, 27, 33, 76, 199, 451, 654, 1238]
 2. 计数排序：每个桶只存储单一键值。
 3. 桶排序：每个桶存储一定范围的数值。
 
-
-
-## 参考文章
+## 6. 参考文章
 
 1. [Java实现八大排序算法](https://www.cnblogs.com/morethink/p/8419151.html)
 
