--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -168,6 +168,22 @@
 19. 平衡查找树之红黑树（Red-Black Tree）
 20. 查找之B 树和 B+ 树（B Tree/B+ 树）
 21. 分块查找
+22. 堆
+23. 线性表顺序存储
+24. 线性表链式存储
+
+
+
+### 2020年8月
+
+1. B 树
+2.  基数排序
+3. 直接插入排序
+4. 简单选择排序
+5. 堆排序
+6. 冒泡排序
+
+
 
 #### 计划
 
@@ -185,28 +201,28 @@
    11. 哈希查找  - 已完成
 2. 排序算法
    1. 排序算法总结
-   2. 直接插入排序
+   2. 直接插入排序 - 已完成
    3. 希尔排序 - 已完成
-   4. 简单选择排序
-   5. 堆排序
-   6. 冒泡排序
+   4. 简单选择排序 - 已完成
+   5. 堆排序 - 已完成
+   6. 冒泡排序 - 已完成
    7. 快速排序
    8. 归并排序 - 已完成
-   9. 基数排序
+   9. 基数排序 - 已完成
 3. 常用的五大算法
    1. 递归 - 已完成
    2. 回溯算法
    3. 分治算法 - 已完成
    4. 贪心算法 - 已完成
-   5. 分支定界法
+   5. 分支定界法 - 已完成
 4. 红黑树 - 已完成
-5. b树
-6. b+树
+5. b树 - 已完成
+6. b+树 - 已完成
 7. 图
 8. Set 集合 - 已完成
 9. 并查集
-10. 堆
-12. 线性表
+10. 堆 - 已完成
+12. 线性表 - 已完成
 13. 栈 
 14. glide 整理
 15. gradle
@@ -222,33 +238,18 @@
 
 
 
-7/14
-
-* b树
-* b+树
-
 7/15
 
 * 图
 
-7/16
-
-* 线性表链式存储
-
 7/17
 
 * 并查集
-* 线性表顺序存储
 * 查找算法知识
-
-7/18
-
-* 堆
 
 7/19
 
 * glide 整理
-* 冒泡排序
 
 7/21
 
@@ -262,18 +263,14 @@
 7/23
 
 * 快速排序
-* 直接插入排序
 
 7/25
 
-* 简单选择排序
-* 基数排序
 * gradle
 * 组件化与插件化
 
 7/26
 
-* 堆排序
 * 数据库
 * NIO
 * 适配
@@ -345,6 +342,7 @@
    * PriorityQueue
    * transient
    * CopyOnWriteArrayList
+   * PriorityQueue
    * ReentrantLock - 已完成
    * Condition - 已完成
    * ConcurrentHashMap - 已完成
