--- a/DataStructure/数据结构/线性表顺序存储.md
+++ b/DataStructure/数据结构/线性表顺序存储.md
@@ -1,10 +1,10 @@
 #  线性表顺序存储
 
-## 基本概念
+## 1. 基本概念
 
 　　何为数据结构？专门研究数据之间的逻辑关系、存储方式及操作的学问就是所谓的数据结构。
 
-### 数据的逻辑结构
+### 1.1. 数据的逻辑结构
 
 　　数据元素之间存在的关联关系（与它们在计算机中的存储位置无关），被称为数据的逻辑结构。
 
@@ -13,9 +13,9 @@
 1. 集合：数据元素之间只有 “ 同属于一个集合 ” 的关系。
 2. 线性结构：数据元素之间存在 “ 一对一 ” 的关系。
 3. 树形结构：数据元素之间存在 “ 一对多 ” 的关系。
-4. 图状结构或网状结构
+4. 图状结构或网状结构。
 
-## 数据的存储结构
+## 2. 数据的存储结构
 
 　　对于数据不同的逻辑结构，在底层通常有两种物理存储结构（数据元素在计算机存储空间的存放形式）：
 
@@ -24,7 +24,7 @@
 
 ![](image/数据结构.jpg)
 
-## 线性表
+## 3. 线性表
 
 　　对于常用的数据结构可以分为线性结构和非线性结构，线性结构主要是线性表，非线性结构主要是树和图。
 
@@ -34,7 +34,7 @@
 
 　　线性表：一个线性表是 n 个数据元素的有限序列。
 
-### 线性表的基本操作
+### 3.1. 线性表的基本操作
 
 1. 线性表初始化
 2. 插入元素
@@ -51,7 +51,7 @@
 
 　　顺序结构存储是指用一组地址连续的存储单元一次存放线性表中的元素。也就是说，顺序结构线性表中的数据元素的物理关系和逻辑关系是一致的。所以如果线性表采用顺序存储，让线性表中间的某个位置插入或者删除元素需要对其之后的元素进行移动。
 
-## 线性表的顺序表示
+## 4. 线性表的顺序表示
 
 　　线性表的顺序表示指的是用一组地址连续的存储单元一次存储线性表的数据元素。
 
@@ -61,7 +61,7 @@
 
 　　缺点：做插入或删除操作时，需移动大量元素。
 
-### 顺序存储结构的线性表中间位置插入新元素
+### 4.1. 顺序存储结构的线性表中间位置插入新元素
 
 ![](image/顺序线性表插入.png)
 
@@ -79,11 +79,11 @@
 
 ![](image/顺序线性表插入3.png)
 
-### 删除顺序存储结构的线性表中间位置元素
+### 4.2. 删除顺序存储结构的线性表中间位置元素
 
 ![](image/顺序线性表删除.png)
 
-　　删除顺序存储结构的线性表中间位置的元素，操作类似。
+　　删除顺序存储结构的线性表中间位置的元素，与插入的操作类似，把元素往前移一位。
 
 　　删除索引 index = 2 的元素：
 
@@ -99,7 +99,7 @@
 
 　　顺序存储的线性表，采用数据存储，插入元素如果容量不够，需要进行扩容。扩容主要时创建一个新的数组，然后把数据从老数组拷贝到新的数组中。
 
-## 实现 ArrayList
+## 5. 实现 ArrayList
 
 　　Java 中的 ArrayList 就是一个顺序存储的线性表。下面来实现一个简易的 ArrayList。
 
@@ -243,6 +243,7 @@ public class ArrayList<T> implements List<T> {
     public void add(int index, T t) {
         checkIndexOutOdBound(index, size);
         ensureSize(capacity + 1);
+      	// 向后移一位
         System.arraycopy(array, index, array, index + 1, size - index);
         array[index] = t;
         size++;
@@ -309,6 +310,7 @@ public class ArrayList<T> implements List<T> {
         // 如果是删除最后一个元素则不需要 copy
         // 或者 index = size -1
         if (copySize > 0) {
+          	// 向前移一位
             System.arraycopy(array, index + 1, array, index, copySize);
         }
         // index 位置的元素向左移动，则需要把最后一个元素置为 null，避免内存泄漏
@@ -370,11 +372,11 @@ public class ArrayList<T> implements List<T> {
 remove:2,[a,c]
 ```
 
-## 对比 JDK 中的 ArrayList
+## 6. 对比 JDK 中的 ArrayList
 
 　　以上代码实现了线性表的基本操作。下面主要说下和 JDK ArrayList 不同点。
 
-### 1. forEach 迭代
+### 6.1. forEach 迭代
 
 　　以上代码不支持 forEach 迭代，为了实现能够支持 forEach 迭代，需要实现 java.lang.Iterable 接口，如下所示：
 
@@ -399,9 +401,9 @@ remove:2,[a,c]
     }
 ```
 
-### 2. 扩容机制
+### 6.2. 扩容机制
 
-　　扩容机制是不断的将 capacity*2，直到 capacity 大于 expectCapacity，JDK 里的 ArrayList 的扩容机制是：默认容量是 10，当需要的通量超过默认容量时，扩容算法为 (int)(oldCapaactty*1.5)，JDK ArrayList 扩容机制：
+　　扩容机制是不断的将 capacity * 2，直到 capacity 大于 expectCapacity，JDK 里的 ArrayList 的扩容机制是：默认容量是 10，当需要的通量超过默认容量时，扩容算法为 (int)(oldCapaactty*1.5)，JDK ArrayList 扩容机制：
 
 ```java
 private void grow(int minCapacity) {
@@ -417,7 +419,7 @@ private void grow(int minCapacity) {
 }
 ```
 
-### 3. fail-fast 机制
+### 6.3. fail-fast 机制
 
 　　当 foreach 的时候，删除集合元素会抛出 java.util.ConcurrentModificationException 异常。
 
@@ -460,7 +462,7 @@ private static void iteratorMultipleThread() {
 			while (iterator.hasNext()) {
 				System.out.println("迭代元素：" + iterator.next());
 				try {
-					Thread.sleep(10);//出让cpu资源
+					Thread.sleep(10);// 出让 cpu 资源
 				} catch (InterruptedException e) {
 					e.printStackTrace();
 				}
@@ -582,17 +584,17 @@ private static void fixIteratorMultipleThread() {
 
 　　Vector 实现线程安全的方式也很简单，把主要的操作方法加上了 synchornized 关键字，包括 iterator。上面 ArrayList 的 fail-fast 演示同样适用于 Vector，就算把 ArrayList 换成 Vector 同样会出现 ConcurrentModificationException 异常（原因一样）。
 
-## 总结
+## 7. 总结
 
 1. 顺序存储的线性表如 ArrayList、Vector 是用一组地址连续的存储单元（数组）来存储元素的。
 2. 顺序存储的线性表，因为需要一个固定长度的数组，在空间上存在一定的浪费。
-3. 顺寻存储的线性表的逻辑结构和物理结构一致，所以查找和读取的效率很高。
+3. 顺序存储的线性表的逻辑结构和物理结构一致，所以查找和读取的效率很高。
 4. 如果在 ArrayList、Vector 的中间对元素进行添加、删除操作，性能是比较差的，因为需要对元素进行整体移动。
 5. 如果在开发中知道存储的元素的个数，为了节省内存空间可以在构造 ArrayList 的时候传递容量参数，如 new ArrayList(2)；如果使用的是无参的构造方法，在执行 add 方法的时候，会创建长度为 10 的数组（DEFAULT_CAPACITY=10）。
 6. 在不考虑多线程的情况下，尽量使用 ArrayList，效率更高。
 7. 线性表应用：一元多项式的表示及相加。
 
-## 参考文章
+## 8. 参考文章
 
 1. [数据结构与算法（一）线性表之顺序存储和 ArrayList、Vector 源码剖析](https://chiclaim.blog.csdn.net/article/details/80158343)
 
