--- a/DataStructure/算法/分支定界法.md
+++ b/DataStructure/算法/分支定界法.md
@@ -1,10 +1,10 @@
 #  分支定界法
 
-## 基本描述
+## 1. 基本描述
 
-　　类似于回溯法，也是一种在问题的解空间树 T 上搜索问题解的算法。但在一般情况下，分支限界法与回溯法的求解目标不同。回溯法的求解目标是找出 T 中满足约束条件的所有解，而分支限界法的求解目标则是找出满足约束条件的一个解，或是在满足约束条件的解中找出使某一目标函数值达到极大或极小的解，即在某种意义下的最优解。
+　　类似于回溯法，也是一种在问题的解空间树 T 上搜索问题解的算法，但在一般情况下，分支限界法与回溯法的求解目标不同。回溯法的求解目标是找出 T 中满足约束条件的所有解，而分支限界法的求解目标则是找出满足约束条件的一个解，或是在满足约束条件的解中找出使某一目标函数值达到极大或极小的解，即在某种意义下的最优解。
 
-### 分支搜索算法
+### 2. 分支搜索算法
 
 　　所谓 “ 分支 ” 就是采用广度优先的策略，依次搜索 E- 节点的所有分支，也就是所有相邻节点，抛弃不满足约束条件的节点，其余节点加入活结点表。然后从表中选择一个节点作为下一个 E- 节点，继续搜索。
 
@@ -14,15 +14,15 @@
 2. LIFO 搜索
 3. 优先队列式搜索
 
-## 分支限界法的一般过程
+## 3. 分支限界法的一般过程
 
 　　由于求解目标不同，导致分支限界法与回溯法在解空间树 T 上的搜索方式也不相同。回溯法以深度优先的方式搜索解空间树 T，而分支限界法则以广度优先或以最小耗费优先的方式搜索解空间树 T。
 
 　　分支限界法的搜索策略是：在扩展结点处，先生成其所有的儿子结点（分支），然后再从当前的活结点表中选择下一个扩展对点。为了有效地选择下一扩展结点，以加速搜索的过程，在每一个活结点处，计算一个函数值（限界），并根据这些已计算出的函数值，从当前活节点表中选择一个最有利的结点作为扩展结点，使搜索朝着解空间树上有最优解的分支推进，以便尽快地超出一个最优解。
 
-　　分支限界法常以广度优先或以最小耗费（最大效益）优先的方式搜索问题的解空间树。问题的解空间树是表示问题解空间的一棵有序树，常见的有子集树和排列树。在搜索问题的解空间树时，分支限定法与回溯法对当前扩展节点所使用的扩展方式不同。在分支限界法中，每一个活结点只有依次机会成为扩展节点。活结点一旦成为扩展结点，就一次性产生其所有儿子结点。在这些儿子节点中，那些导致不可行解或导致非最优解的儿子结点被舍弃，其余儿子结点北加如活结点表中。此后，从活结点表中取下一个节点成为当前扩展结点，并重复上述结点扩展过程。这一过程一直持续到找到所求的解或活结点表为空时为止。
+　　分支限界法常以广度优先或以最小耗费（最大效益）优先的方式搜索问题的解空间树。问题的解空间树是表示问题解空间的一棵有序树，常见的有子集树和排列树。在搜索问题的解空间树时，分支限定法与回溯法对当前扩展节点所使用的扩展方式不同。在分支限界法中，每一个活结点只有一次机会成为扩展节点。活结点一旦成为扩展结点，就一次性产生其所有儿子结点。在这些儿子节点中，那些导致不可行解或导致非最优解的儿子结点被舍弃，其余儿子结点被加入活结点表中。此后，从活结点表中取下一个节点成为当前扩展结点，并重复上述结点扩展过程。这一过程一直持续到找到所求的解或活结点表为空时为止。
 
-## 回溯法与分支限界法的一些区别
+## 4. 回溯法与分支限界法的一些区别
 
 　　有一些问题其实无论用回溯法还是分支限界法都可以得到很好的解决，但是另外一些则不然。也许需要具体一些的分析 -- 到底何时使用分支限界而何时使用回溯呢？
 
@@ -32,10 +32,10 @@
 * 存储结点的常用数据结构
 * 结点存储特性常用应用
 
-　　回溯法深度优先搜索堆栈活结点的所有可行子节点被遍历后才被从栈中弹出找出满足约束条件的所有解。
+　　回溯法深度优先搜索堆栈活结点的所有可行子节点，被遍历后才被从栈中弹出找出满足约束条件的所有解。
 
-　　分支限界法广度优先或最小消耗优先搜索队列、优先队列每个结点只有依次成为活结点的机会找出满足约束条件的一个解或特定意义下的最优解。
+　　分支限界法广度优先或最小消耗优先搜索队列、优先队列每个结点只有一次成为活结点的机会，找出满足约束条件的一个解或特定意义下的最优解。
 
-## 参考文章
+## 5. 参考文章
 
 1. [五大常用算法之五：分支定界法](https://www.cnblogs.com/steven_oyj/archive/2010/05/22/1741378.html)
