--- a/DataStructure/算法/排序算法/堆排序.md
+++ b/DataStructure/算法/排序算法/堆排序.md
@@ -6,13 +6,13 @@
 
 　　把此序列对应的二维数组看成一个完全二叉树。那么堆的含义就是：完全二叉树中任何一个非叶子节点的值均不大于（或不小于）其左、右孩子节点的值。由上述性质可知大顶堆的堆顶的关键字肯定是所有关键字中最大的，小顶堆的堆顶的关键字肯定是所有关键字中最小的。因此可使用大顶堆进行升序排序，使用小顶堆进行降序排序。
 
-## 基本思想
+## 1. 基本思想
 
 　　此处以大顶推为例，堆排序的过程就是将待排序的序列构建成一个堆，选出堆中最大的移走，再把剩余的元素调整成堆，找出最大的再移走，重复直至有序。
 
 　　堆排序的主要思想是：给定一个待排序序列，首先经过一次调整，将序列构建成一个大顶堆，此时第一个元素最大的元素，将其和序列的最后一个元素交换，然后对前 n-1 个元素调整为大顶堆，再将其第一个元素和末尾元素交换，这样最后即可得到有序序列。
 
-## 算法描述
+## 2. 算法描述
 
 1. 先将初始序列 K[1...n] 建成一个大顶堆，那么此时第一个元素 K1 最大，此堆为初始的无序区。
 2. 再将关键字最大的记录 K1（即堆顶，第一个元素）和无序区的最后一个记录 kn 交换，由此得到新的无序区 K[1...n-1] 和有序区 K[n]，且满足 K[1...n-1]。keys <= k[n].key。
@@ -22,9 +22,9 @@
 
 ![](image/堆排序.gif)
 
-## 代码实现
+## 3. 代码实现
 
-　　从算法描述来看，堆排序需要两个过程，一是建立堆，而是堆顶与堆的最后一个元素交换位置。所以堆排序有两个函数组成。一是建堆函数，而是反复调用建堆函数以选择出剩余未排元素中最大的数来实现排序的函数。
+　　从算法描述来看，堆排序需要两个过程，一是建立堆，而是堆顶与堆的最后一个元素交换位置。所以堆排序有两个函数组成。一是建堆函数，二是反复调用建堆函数以选择出剩余未排元素中最大的数来实现排序的函数。
 
 　　总结起来就是定义了以下几种操作：
 
@@ -47,7 +47,7 @@ public class HeapSort {
     public static void sort(int[] a) {
         for (int i = a.length - 1; i > 0; i--) {
             max_heapify(a, i);
-            //栈顶元素（第一个元素）与 Kn 交换
+            // 栈顶元素（第一个元素）与 Kn 交换
             int temp = a[0];
             a[0] = a[i];
             a[i] = temp;
@@ -72,7 +72,7 @@ public class HeapSort {
             if (child != n && a[child] < a[child + 1]) {
                 child++;
             }
-            // 交换父节点与左右子节点重的最大值
+            // 交换父节点与左右子节点中的最大值
             if (a[i] < a[child]) {
                 int temp = a[i];
                 a[i] = a[child];
@@ -99,23 +99,23 @@ public class HeapSort {
 a:[1, 2, 3, 4, 5, 6, 7, 8, 9]
 ```
 
-## 复杂度分析
+## 4. 复杂度分析
 
-1. 建立堆父过程，从 length/2 一直处理到 0，时间复杂度为 O(n)；
-2. 调整堆的过程是沿着堆的父子节点进行调整，执行次数为堆的深度，时间复杂度为 O(lgn)；
-3. 堆排序的过程由 n 次第 2 步完成，时间复杂度为 O(nlgn)。
+1. 建立堆的过程，从 length/2 一直处理到 0，时间复杂度为 O(n)；
+2. 调整堆的过程是沿着堆的父子节点进行调整，执行次数为堆的深度，时间复杂度为 O(logn)；
+3. 堆排序的过程由 n 次第 2 步完成，时间复杂度为 O(nlogn)。
 
 | 平均时间复杂度 | 最好情况   | 最坏情况   | 空间复杂度 |
 | -------------- | ---------- | ---------- | ---------- |
-| O(nlog2 n)     | O(nlog2 n) | O(blog2 n) | O(1)       |
+| O(nlog2 n)     | O(nlog2 n) | O(nlog2 n) | O(1)       |
 
-## 总结与思考
+## 5. 总结与思考
 
 　　由于堆排序中初始化堆的过程比较次数比较多，因此它不太适用于小序列，也不适宜于记录数较少的文件。同时由于多次任意下标相互交换位置，相同元素之间原本想对的顺序被破坏了，因此，它是不稳定的排序。
 
 　　与快排和归并排序相比，堆排序在最差情况下的时间复杂度优于快排，空间效率高于归并排序。
 
-## 参考文章
+## 6. 参考文章
 
 1. [Java实现八大排序算法](https://www.cnblogs.com/morethink/p/8419151.html)
 3. [常见数据结构与算法整理总结（下）](https://www.jianshu.com/p/42f81846c0fb)
