--- a/DesignPatterns/关于设计模式的常见问题.md
+++ b/DesignPatterns/关于设计模式的常见问题.md
@@ -4,6 +4,8 @@
 
 ### 1.1. 单例模式
 
+写出三种单例模式实现
+
 几种实现，手写
 
 ### 1.2. 工厂模式
@@ -14,7 +16,7 @@
 
 ### 1.4. 代理模式
 
-
+代理模式：静态代理和动态代理
 
 ### 1.5. 适配者模式
 
