--- a/项目信息/智慧课堂项目的功能.md
+++ b/项目信息/智慧课堂项目的功能.md
@@ -30,3 +30,21 @@
 　　为了尽可能提高 ManagerAppService保活，使用了 双进程守护 + 前台服务 + JobScheduler 三种手段来处理。
 
 　　KeepLiveService 继承 JobService，在 onStartJob 中检查 ManagerAppService 时候存活，如果不，则启动 ManagerAppService 服务，在 ManagerAppService 的 onStartCommand() 方法中启动并绑定 KeepLiveService ，在绑定断开的时候再次启动并绑定 KeepLiveService。
+
+
+
+## 2. HTML 解析
+
+[Java开源Html解析类库](http://blog.chinaunix.net/uid-20767210-id-1849644.html)
+
+[java开源HTML解析器收集](https://blog.csdn.net/xiaomin1991222/article/details/50980475)
+
+[开源Html分析器解析库对比](https://www.jdon.com/45938)
+
+[利用 TagSoup 拯救可怕的 HTML](https://blog.csdn.net/weistar103/article/details/84528738)
+
+[如何使用android中的tagsoup解析xml中的html内容](https://www.jb51.cc/android/308935.html)
+
+[支付宝 Android 版使用的开源组件](https://www.jianshu.com/p/844e338319af)
+
+[TagSoup开发指南](https://blog.csdn.net/iteye_7356/article/details/82071981)
