--- a/DesignPatterns/关于设计模式的常见问题.md
+++ b/DesignPatterns/关于设计模式的常见问题.md
@@ -1,26 +1,305 @@
 # 关于设计模式的常见问题
 
-## 1. 描述熟悉的设计模式，并说明使用
+# 1. 描述熟悉的设计模式，并说明使用
 
-### 1.1. 单例模式
+## 1.1. 单例模式
 
-写出三种单例模式实现
+* 单例模式确保某一个类只有一个实例，而且自行实例化并向整个系统提供这个实例，这个类称为单例类，它提供全局访问的方法。单例模式的要点有三个：一是某个类只能有一个实例；二是它必须自行创建这个实例；三是它必须自行向整个系统提供这个实例。单例模式是一种对象创建型模式。
+* 单例模式只包括一个单例角色：在单例类的内部实现只生成一个实例，同时它提供了一个静态的工厂方法，让客户可以使用它的唯一实例；为了防止在外部对其实例化，将其构造函数设计为私有。
+* 单例模式的目的是保证一个类仅有一个实例，并提供一个访问它的全局访问点。单例类拥有一个私有构造函数，确保用户无法通过 new 关键字直接实例化它。除此之外，该模式中包含了一个静态私有成员变量与静态公有的工厂方法。该工厂方法负责检验实例的存在性并实例化自己，然后存储在静态成员变量中，以确保只有一个实例被创建。
+* 单例模式的主要优点在于提供了对唯一实例的受控访问并可以节约系统资源；其主要缺点在于因为缺少抽象层而难以扩展，且单例类职责过重。
+* 单例模式适用情况包括：系统只需要一个实例对象；客户调用类的单例实例只允许使用一个公共访问点。
 
-几种实现，手写
+### 1.1.1. 五种单例模式的实现
 
-### 1.2. 工厂模式
+#### 1.1.1.1. 懒汉式，线程不安全
 
-### 1.3. 观察者模式
+　　这种方式是最基本的实现方式，这种实现最大的问题就是不支持多线程。因为没有加锁 synchronized，所以严格意义上它并不算单例模式。
+这种方式 lazy loading 很明显，不要求线程安全，在多线程不能正常工作。
 
+```java
+ public class Singleton {  
+     private static Singleton instance;  
+     private Singleton (){}  
+   
+     public static Singleton getInstance() {  
+     	if (instance == null) {  
+         	instance = new Singleton();  
+     	}  
+     	return instance;  
+     }  
+} 
+```
 
+#### 1.1.1.2. 懒汉式，线程安全
 
-### 1.4. 代理模式
+　　这种方式具备很好的 lazy loading，能够在多线程中很好的工作，但是，效率很低，99% 情况下不需要同步。
+　　优点：第一次调用才初始化，避免内存浪费。
+　　缺点：必须加锁 synchronized 才能保证单例，但加锁会影响效率。
+getInstance() 的性能对应用程序不是很关键（该方法使用不太频繁）。
 
-代理模式：静态代理和动态代理
+```java
+ public class Singleton {  
+     private static Singleton instance;  
+     private Singleton (){}  
+     public static synchronized Singleton getInstance() {  
+     	if (instance == null) {  
+         	instance = new Singleton();  
+     	}  
+     	return instance;  
+     }  
+ }
+```
 
-### 1.5. 适配者模式
+#### 1.1.1.3. 饿汉式
 
+　　这种方式比较常用，但容易产生垃圾对象。
+　　优点：没有加锁，执行效率会提高。
+　　缺点：类加载时就初始化，浪费内存。
+　　它基于 classloder 机制避免了多线程的同步问题，不过，instance 在类装载时就实例化，虽然导致类装载的原因有很多种，在单例模式中大多数都是调用 getInstance 方法， 但是也不能确定有其他的方式（或者其他的静态方法）导致类装载，这时候初始化 instance 显然没有达到 lazy loading 的效果。
 
+```java
+ public class Singleton {  
+     private static Singleton instance = new Singleton();  
+     private Singleton (){}  
+     public static Singleton getInstance() {  
+     	return instance;  
+     }  
+ }
+```
 
-### 1.6. 装饰模式
+#### 1.1.1.4. 双检锁/双重检验锁（DCL，即 double-checked locking）
 
+　　这种方式采用双锁机制，安全且在多线程情况下能保持高性能。
+getInstance() 的性能对应用程序很关键。
+
+```java
+ public class Singleton {  
+     private volatile static Singleton singleton;  
+     private Singleton (){}  
+     public static Singleton getSingleton() {  
+     	if (singleton == null) {  
+         	synchronized (Singleton.class) {  
+         		if (singleton == null) {  
+             		singleton = new Singleton();  
+         		}  
+         	}  
+     	}  
+     	return singleton;  
+     }  
+ }
+```
+
+#### 1.1.1.5. 登记式/静态内部类
+
+　　这种方式能达到双检锁方式一样的功效，但实现更简单。对静态域使用延迟初始化，应使用这种方式而不是双检锁方式。这种方式只适用于静态域的情况，双检锁方式可在实例域需要延迟初始化时使用。
+这种方式同样利用了 classloder 机制来保证初始化 instance 时只有一个线程，它跟第 3 种方式不同的是：第 3 种方式只要 Singleton 类被装载了，那么 instance 就会被实例化（没有达到 lazy loading 效果），而这种方式是 Singleton 类被装载了，instance 不一定被初始化。因为 SingletonHolder 类没有被主动使用，只有显示通过调用 getInstance 方法时，才会显示装载 SingletonHolder 类，从而实例化 instance。想象一下，如果实例化 instance 很消耗资源，所以想让它延迟加载，另外一方面，又不希望在 Singleton 类加载时就实例化，因为不能确保 Singleton 类还可能在其他的地方被主动使用从而被加载，那么这个时候实例化 instance 显然是不合适的。这个时候，这种方式相比第 3 种方式就显得很合理。
+
+```java
+ public class Singleton {  
+     private static class SingletonHolder {  
+     	private static final Singleton INSTANCE = new Singleton();  
+     }  
+     private Singleton (){}  
+     public static final Singleton getInstance() {  
+     	return SingletonHolder.INSTANCE;  
+     }  
+ }
+```
+
+#### 1.1.1.6. 枚举
+
+　　这种实现方式还没有被广泛采用，但这是实现单例模式的最佳方法。它更简洁，自动支持序列化机制，绝对防止多次实例化。
+这种方式是 Effective Java 作者 Josh Bloch 提倡的方式，它不仅能避免多线程同步问题，而且还自动支持序列化机制，防止反序列化重新创建新的对象，绝对防止多次实例化。不过，由于 JDK1.5 之后才加入 enum 特性，用这种方式写不免让人感觉生疏，在实际工作中，也很少用。
+　　不能通过 reflection attack 来调用私有构造方法。
+
+```java
+ public enum Singleton {  
+     INSTANCE;  
+     public void whateverMethod() {  
+     }  
+ } 
+```
+
+　　一般情况下，不建议使用第 1 种和第 2 种懒汉方式，建议使用第 3 种饿汉方式。只有在要明确实现 lazy loading 效果时，才会使用第 5 种登记方式。如果涉及到反序列化创建对象时，可以尝试使用第 6 种枚举方式。如果有其他特殊的需求，可以考虑使用第 4 种双检锁方式。
+
+## 1.2. 工厂模式
+
+## 1.3. 观察者模式
+
+## 1.4. 代理模式
+
+* 在代理模式中，要求给某一个对象提供一个代理，并由代理对象控制对原对象的引用。代理模式的英文叫做 Proxy 或 Surrogate，它是一种对象结构型模式。
+* 代理模式包含三个角色：抽象主题角色声明了真实主题和代理主题的共同接口；代理主题角色内部包含对真实主题的引用，从而可以在任何时候操作真实主题对象；真实主题角色定义了代理角色所代表的真实对象，在真实主题角色中实现了真实的业务操作，客户端可以通过代理主题角色间接调用真实主题角色中定义的方法。
+* 代理模式的优点在于能够协调调用者和被调用者，在一定程度上降低了系统的耦合度；其缺点在于由于在客户端和真实主题之间增加了代理对象，因此有些类型的代理模式可能会造成请求的处理速度变慢，并且实现代理模式需要额外的工作，有些代理模式的实现非常复杂。远程代理为一个位于不同的地址空间的对象提供一个本地的代表对象，它使得客户端可以访问在远程机器上的对象，远程机器可能具有更好的计算性能与处理速度，可以快速响应并处理客户端请求。
+* 如果需要创建一个资源消耗较大的对象，先创建一个消耗较小的对象来表示。正式对象只在需要时才会被真正创建，这个小对象称为虚拟代理。虚拟代理通过使用一个小对象来表示一个大对象，可以减少系统资源的消耗，对系统进行优化并提高运行速度。
+* 保护代理可以控制对一个对象的访问，可以给不同的用户提供不同级别的使用权限。
+
+### 1.4.1. 静态代理和动态代理
+
+　　Java 中的代理按照代理类生成时机不同又分为静态代理和动态代理。静态代理代理类在编译期就生成，而动态代理代理类则是在 Java 运行时动态生成。
+
+#### 1.4.1.1. 静态代理
+
+　　Java 中的静态代理要求代理类(ProxySubject)和委托类(RealSubject)都实现同一个接口(Subject)。静态代理中代理类在编译期就已经确定，而动态代理则是 JVM 运行时动态生成，静态代理的效率相对动态代理来说相对高一些，但是静态代理代码冗余大，一单需要修改接口，代理类和委托类都需要修改。
+　　举个例子：
+
+**接口(Subject)**：
+
+```csharp
+interface HelloService {
+    void sayHello();
+}
+```
+
+**委托类**：
+
+```java
+class HelloServiceImpl implements HelloService {
+    @Override
+    public void sayHello() {
+        System.out.println("Hello World!");
+    }
+}
+```
+
+**代理类**：
+
+```java
+class HelloServiceProxy implements HelloService {
+    private HelloService helloService;
+    
+    public HelloServiceProxy(HelloService helloService) {
+        this.helloService = helloService;
+    }
+    
+    @Override
+    public void sayHello() {
+        System.out.println("Before say hello...");
+        helloService.sayHello();
+        System.out.println("After say hello...");
+    }
+}
+```
+
+**测试类**：
+
+```cpp
+public class HelloServiceProxyTest {
+    
+    public static void main(String[] args) {
+        HelloService helloService = new HelloServiceImpl();
+        HelloServiceProxy proxy = new HelloServiceProxy(helloService);
+        proxy.sayHello();
+    }
+}
+```
+
+**输出结果**：
+
+```swift
+Before say hello...
+Hello World!
+After say hello...
+```
+
+#### 1.4.1.2. 动态代理
+
+　　Java 中的动态代理依靠反射来实现，代理类和委托类不需要实现同一个接口。委托类需要实现接口，否则无法创建动态代理。代理类在 JVM 运行时动态生成，而不是编译期就能确定。
+　　Java动态代理主要涉及到两个类：`java.lang.reflect.Proxy`和`java.lang.reflect.InvocationHandler`。代理类需要实现 InvocationHandler 接口或者创建匿名内部类，而 Proxy 用于创建动态动态。
+　　 用动态代理来实现HelloService：
+
+**接口(Subject)**：
+
+```csharp
+interface HelloService {
+    void sayHello();
+}
+```
+
+**委托类**：
+
+```java
+class HelloServiceImpl implements HelloService {
+    @Override
+    public void sayHello() {
+        System.out.println("Hello World!");
+    }
+}
+```
+
+**动态代理类**：
+
+```csharp
+class HelloServiceDynamicProxy {
+
+    private HelloService helloService;
+    public HelloServiceDynamicProxy(HelloService helloService) {
+        this.helloService = helloService;
+    }
+
+    public Object getProxyInstance() {
+        return Proxy.newProxyInstance(helloService.getClass().getClassLoader(), helloService.getClass().getInterfaces(), new InvocationHandler() {
+            @Override
+            public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
+                System.out.println("Before say hello...");
+                Object ret = method.invoke(helloService, args);
+                System.out.println("After say hello...");
+                return ret;
+            }
+        });
+    }
+}
+```
+
+**测试类**：
+
+```cpp
+public class HelloServieDynamicProxyTest {
+    public static void main(String[] args){
+        HelloService helloService = new HelloServiceImpl();
+        HelloService dynamicProxy = (HelloService) new HelloServiceDynamicProxy(helloService).getProxyInstance();
+        dynamicProxy.sayHello();
+    }
+}
+```
+
+**输出结果**：
+
+```swift
+Before say hello...
+Hello World!
+After say hello...
+```
+
+#### 1.4.1.3. 总结
+
+1. 静态代理实现较简单，代理类在编译期生成，效率高。缺点是会生成大量的代理类。
+2. JDK 动态代理不要求代理类和委托类实现同一个接口，但是委托类需要实现接口，代理类需要实现 InvocationHandler 接口。
+3. 动态代理要求代理类 InvocationHandler 接口，通过反射代理方法，比较消耗系统性能，但可以减少代理类的数量，使用更灵活。
+
+## 1.5. 适配者模式
+
+　　适配器模式有对象适配器和类适配器两种实现：
+
+　　对象适配器：
+![](J:/zhangmiao/android_learning_notes/DesignPatterns/image/对象适配器.jpg)
+
+　　类适配器：
+![](image/Adapter_classModel.jpg)
+
+* 结构型模式描述如何将类或者对象结合在一起形成更大的结构。
+* 适配器模式用于将一个接口转换成客户希望的另一个接口，适配器模式使接口不兼容的那些类可以一起工作，其别名为包装器。适配器模式既可以作为类结构性模式，也可以作为对象结构性模式。
+* 适配器模式包含四个角色：**目标抽象类**定义客户要用的特定领域的接口；**适配器类**可以调用另一个接口，作为一个转换器，对适配者和抽象目标类进行适配，它是适配器模式的核心；**适配者类**是被适配的角色，它定义了一个已经存在的接口，这个接口需要适配；在**客户类**中针对目标抽象类进行编程，调用在目标抽象类中定义的业务方法。
+* 在类适配器模式中，适配器类实现了目标抽象类接口并继承了适配者类，并在目标抽象类的实现方法中调用所继承的适配者类的方法；在对象适配器模式中，适配器类继承了目标抽象类并定义了一个适配者类的对象实例，在所继承的目标抽象类方法中调用适配者类的相应业务方法。
+* 适配器模式的主要优点是将目标类和适配者类解耦，增加了类的透明性和复用性，同时系统的灵活性和扩展性都非常好，更换适配器或者增加新的适配器都非常方便，符合 “ 开闭原则 ”；类适配器模式的缺点是适配器类在很多编程语言中不能同时适配多个适配者类，对象适配器模式的缺点是很难置换适配者类的方法。
+* 适配器模式适用情况包括：系统需要使用现有的类，而这些类的接口不符合系统的需要；想要建立一个可以重复使用的类，用于与一些彼此之间没有太大关联的一些类一起工作。
+
+## 1.6. 装饰模式
+
+- 装饰模式用于动态地给一个对象增加一些额外的职责，就增加对象功 能来说，装饰模式比生成子类实现更为灵活。它是一种对象结构型模 式。
+- 装饰模式包含四个角色：抽象构件定义了对象的接口，可以给这些对 象动态增加职责（方法）；具体构件定义了具体的构件对象，实现了 在抽象构件中声明的方法，装饰器可以给它增加额外的职责（方法）； 抽象装饰类是抽象构件类的子类，用于给具体构件增加职责，但是具 体职责在其子类中实现；具体装饰类是抽象装饰类的子类，负责向构 件添加新的职责。
+- 使用装饰模式来实现扩展比继承更加灵活，它以对客户透明的方式动 态地给一个对象附加更多的责任。装饰模式可以在不需要创造更多子 类的情况下，将对象的功能加以扩展。
+- 装饰模式的主要优点在于可以提供比继承更多的灵活性，可以通过一种动态的 方式来扩展一个对象的功能，并通过使用不同的具体装饰类以及这些装饰类的 排列组合，可以创造出很多不同行为的组合，而且具体构件类与具体装饰类可 以独立变化，用户可以根据需要增加新的具体构件类和具体装饰类；其主要缺 点在于使用装饰模式进行系统设计时将产生很多小对象，而且装饰模式比继承 更加易于出错，排错也很困难，对于多次装饰的对象，调试时寻找错误可能需 要逐级排查，较为烦琐。
+- 装饰模式适用情况包括：在不影响其他对象的情况下，以动态、透明的方式给 单个对象添加职责；需要动态地给一个对象增加功能，这些功能也可以动态地 被撤销；当不能采用继承的方式对系统进行扩充或者采用继承不利于系统扩展 和维护时。
+- 装饰模式可分为透明装饰模式和半透明装饰模式：在透明装饰模式中，要求客 户端完全针对抽象编程，装饰模式的透明性要求客户端程序不应该声明具体构 件类型和具体装饰类型，而应该全部声明为抽象构件类型；半透明装饰模式允 许用户在客户端声明具体装饰者类型的对象，调用在具体装饰者中新增的方法。
