--- a/Android/optimize/性能优化.md
+++ b/Android/optimize/性能优化.md
@@ -4,7 +4,7 @@
 
 1. 内存优化
 2. UI 优化（ 布局优化和绘制优化 ）
-3. 内存优化
+3. 内存泄漏
 4. 启动优化
 5. 网络优化
 6. 包体优化
@@ -73,7 +73,7 @@
 * MAT 工具
 * TraceView 工具（Device Monitor）
 
-　　第三方文熙工具：
+　　第三方分析工具：
 
 * Memory Analyzer
 * GT Home
@@ -111,7 +111,7 @@
 
 5. 使用 include 和 merge 增加复用，减少层级。
 
-   针对嵌套布局，goognle 提出了 include、merge 和 ViewStub 。
+   针对嵌套布局，google 提出了 include、merge 和 ViewStub 。
 
    include 可以提高布局的复用性，大大方便开发，include 没有减少布局的嵌套，但是 include 和 merge 联手搭配，还是不错的。
 
@@ -180,7 +180,7 @@
 
 　　分析依据：Draw + Process + Execute = 完整的显示一帧时间 < 16ms。
 
-## 3.内存优化
+## 3.内存泄漏
 
 　　内存泄漏：程序不再使用的对象无法被 GC 识别，导致对象一直留在内存当中，占用了内存空间。
 
@@ -206,8 +206,6 @@
 　　Context 和 Toast 是容易出现内存泄漏的，如果生命周期长，可以使用 Application 的 Content。
 
 　　**解决方法**：生命周期长的引用生命周期长的，不要引用生命周期短的。
-
-
 
 ### 3.3. 匿名内部类 / 非静态内部类
 
@@ -433,7 +431,7 @@ android {
 
 ## 7. 电量优化
 
-　　Battery Historian 是由 Google 提供的 Android 系统电量分析工具，从手机中到处 bugreport 文件上传至页面，在网页中生成详细的图标数据来展示手机上各模块电量消耗过程，最后通过 App 数据的分析制定出相应的电量优化的方法。
+　　Battery Historian 是由 Google 提供的 Android 系统电量分析工具，从手机中导出 bugreport 文件上传至页面，在网页中生成详细的图标数据来展示手机上各模块电量消耗过程，最后通过 App 数据的分析制定出相应的电量优化的方法。
 
 　　谷歌推荐使用 JobScheduler 来调整任务优先级等策略来达到降低损耗的目的。JobScheduler 可以避免频繁的唤醒硬件模块，造成不必要的电量消耗。避免在不合适的时间（例如低电量情况下、弱网络或者移动网络情况下）执行过多的任务从而消耗电量。
 
@@ -457,7 +455,7 @@ android {
 
 　　**推迟**：应用是否需要立即执行操作？例如，可以等到设备充电时把数据备份到云端。
 
-　　**合并**：可以批处理工作，而不是多次将设备至于活动状态吗？例如，几十个应用程序是否真的有必要在不同实践打开收音机发送邮件，在依次唤醒收音机期间，是否可以传输消息。
+　　**合并**：可以批处理工作，而不是多次将设备至于活动状态吗？例如，几十个应用程序是否真的有必要在不同时间打开收音机发送邮件，在依次唤醒收音机期间，是否可以传输消息。
 
 ### 7.3. 电量优化的方法
 
@@ -488,14 +486,14 @@ android {
 
 　　**线程池的优点**
 
-1. 减少在创建和销毁线程上所化的时间以及系统资源的开销。
+1. 减少在创建和销毁线程上所花的时间以及系统资源的开销。
 2. 如不使用线程池，有可能造成系统创建大量线程而导致消耗完系统内存以及 ” 过度切换 “。
 
 　　**注意**
 
-1. 如果线程池中的数量未达到核心线程的数量，则直接回启动一个核心线程来执行任务。
+1. 如果线程池中的数量未达到核心线程的数量，则直接会启动一个核心线程来执行任务。
 2. 如果线程池中的数量已经达到或超过核心线程的数量，则任务会被插入到任务队列中等待执行。
-3. 如果 2 中的任务无法插入到任务队列中，犹豫任务队列已满，这时候如果线程数量未达到线程池规定最大值，则回启动一个非核心线程来执行任务。
+3. 如果 2 中的任务无法插入到任务队列中，等待任务队列已满，这时候如果线程数量未达到线程池规定最大值，则回启动一个非核心线程来执行任务。
 4. 如果 3 中线程数量已经达到线程池最大值，则会拒绝执行此任务，ThreadPoolExecutor 会调用 RejectedExecutionHandler 的 rejectedExecution 方法通知调用者。
 
 ### 8.4. 高效代码
@@ -503,7 +501,7 @@ android {
 　　编写高效代码的有个基本规则：1.不要做不需要做的工作；2.如果可以避免，请不要分配内存。
 
 1. 避免创建不必要的对象。
-2. 首选静态。如果不需要访问对象的字段，请使方法保持静态。调用毒素将提高约 15% - 20%。
+2. 首选静态。如果不需要访问对象的字段，请使方法保持静态。调用速度将提高约 15% - 20%。
 3. 对常量使用 static final，此优化仅适用于基本类型和 String 常量，而不适用于任意引用类型。
 4. 使用增加的 for 循环语句。增强 for 循环（for-each）可用于实现 Iterator 接口和数组的集合。
 5. 避免使用浮点数。根据经验，浮点数比 Android 设备上的整数慢约 2 倍。
