--- a/DesignPatterns/关于设计模式的常见问题.md
+++ b/DesignPatterns/关于设计模式的常见问题.md
@@ -125,6 +125,49 @@ getInstance() 的性能对应用程序很关键。
 
 ## 1.2. 工厂模式
 
+　　工厂模式分为工厂方法模式和抽象工厂模式。
+
+### 1.2.1. 工厂方法模式
+
+　　工厂方法模式分为三种：普通工厂模式，就是建立一个工厂类，对实现了统一接口的类进行实例的创建。
+
+　　多个工厂方法模式，是对普通工厂方法模式的改进，在普通工厂方法模式中，如果传递的字符串出错，则不能正确创建对象，而多个工厂方法模式是提供多个工厂方法，分别创建对象。
+
+　　静态工厂放啊模式，将上面的多个工厂方法模式里的方法置为静态的，不需要创建实例，直接调用即可。
+
+### 1.2.2. 抽象工厂模式
+
+　　工厂方法模式有一个问题就是，类的创建依赖于工厂类，也就是说，如果想要扩展程序，必须对工厂类进行修改，这违背了闭包原则，所以，从设计角度考虑，可以使用抽象工厂模式，创建多个工厂类，这样一旦需要增加新的功能，直接增加新的工厂类就可以了，不需要修改之前的代码。
+
+
+
+　　工厂模式分为简单工厂模式、工厂方法模式和抽象工厂模式。
+
+### 1.2.1. 简单工厂模式
+
+![](image/SimpleFactory.jpg)
+
+* 创建型模式对类的实例化过程进行了抽象，能够将对象的创建与对象的使用过程分离。
+* 简单工厂模式又称为静态工厂方法模式，它属于类创建型模式。在简单工厂模式中，可以根据参数的不同返回不同类的实例。简单工厂模式专门定义一个类来负责创建其他类的实例，被创建的实例通常都具有共同的父类。
+* 简单工厂模式包括三个角色：**工厂角色**负责实现创建所有实例的内部逻辑；**抽象产品角色**是所创建的所有对象的父类，负责描述所有实例所共有的公共接口；**具体产品角色**是创建目标，所有创建的对象都充当这个角色的某个具体类的实例。
+* 简单工厂模式的要点在于：当你需要什么，只需要传入一个正确的参数，就可以获取你所需要的对象，而无须知道其创建细节。
+* 简单工厂模式最大的**优点**在于实现对象的创建和对象的使用分离，将对象的创建交给专门的工厂类负责，但是其最大的**缺点**在于工厂类不够灵活，增加新的具体产品需要修改工厂类的判断逻辑代码，而且产品较多时，工厂方法代码将会非常复杂。
+* 简单工厂模式适用情况包括：工厂负责创建的对象比较少；客户端只知道传入工厂类的参数，对于如何创建对象不关心。
+
+### 1.2.2. 工厂方法模式
+
+![](image/FactoryMethod.jpg)
+
+* 工厂方法模式又称为工厂模式，它属于类创建性模式。在工厂方法模式中，工厂父类负责定义创建产品对象的公共接口，而工厂子类则负责生成具体的产品对象，这样做的目的是将产品类的实例化操作延迟到工厂子类中完成，即通过工厂子类来确定究竟应该实例化哪一个具体产品类。
+* 工厂方法模式包含四个角色：**抽象产品**是定义产品的接口，是工厂方法模式所创建对象的超类型，即产品对象的共同父类或接口；**具体产品**实现了抽象产品接口，某种类型的具体产品由专门的具体工厂创建，它们之间往往一一对应；**抽象工厂**中声明了工厂方法，用于返回一个产品，它是工厂方法模式的核心，任何在模式中创建的工厂类都必须实现该接口；**具体工厂**是抽象工厂类的子类，实现了抽象工厂中定义的工厂方法，并可由客户调用，返回一个具体产品类的实例。
+* 工厂方法模式是简单工厂模式的进一步抽象和推广。由于使用了面向对象的多态性，工厂方法模式保持了简单工厂模式的优点，而且克服了它的缺点。在工厂方法模式中，核心的工厂类不在负责所有产品的创建，而是将具体创建工作交给子类去做。这种核心类仅仅负责给出具体工厂必须实现的接口，而不负责产品类被实例化这种细节，这使得工厂方法模式可以允许系统在不修改工厂角色的情况下引进新产品。
+* 工厂方法模式的主要**优点**是增加新的产品类时无须修改现有系统，并封装了产品对象的创建细节，系统具有良好的灵活性和可扩展性；其**缺点**在于增加新产品的同时需要增加新的工厂，导致系统类的个数成双增加，在一定程度上增加了系统的复杂性。
+* 工厂方法模式使用情况包括：一个类不知道它所需要的对象的类；一个类通过其子类来指定创建哪个对象；将创建对象的任务委托给多个工厂子类中的某一个，客户端在使用时可以无须关心是哪一个工厂子类创建产品子类，需要时再动态指定。
+
+### 1.2.3. 抽象工厂模式
+
+
+
 ## 1.3. 观察者模式
 
 ## 1.4. 代理模式
