--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -432,6 +432,10 @@
 
 28. ConcurrentModificationException 异常
 
+29. Protocal buffers 
+
+30. ProGuard 
+
 
 
 [这是一份面向Android开发者的复习指南](https://www.jianshu.com/p/b3c1b9c6dd40)
