--- a/DesignPatterns/关于设计模式的常见问题.md
+++ b/DesignPatterns/关于设计模式的常见问题.md
@@ -125,22 +125,6 @@ getInstance() 的性能对应用程序很关键。
 
 ## 1.2. 工厂模式
 
-　　工厂模式分为工厂方法模式和抽象工厂模式。
-
-### 1.2.1. 工厂方法模式
-
-　　工厂方法模式分为三种：普通工厂模式，就是建立一个工厂类，对实现了统一接口的类进行实例的创建。
-
-　　多个工厂方法模式，是对普通工厂方法模式的改进，在普通工厂方法模式中，如果传递的字符串出错，则不能正确创建对象，而多个工厂方法模式是提供多个工厂方法，分别创建对象。
-
-　　静态工厂放啊模式，将上面的多个工厂方法模式里的方法置为静态的，不需要创建实例，直接调用即可。
-
-### 1.2.2. 抽象工厂模式
-
-　　工厂方法模式有一个问题就是，类的创建依赖于工厂类，也就是说，如果想要扩展程序，必须对工厂类进行修改，这违背了闭包原则，所以，从设计角度考虑，可以使用抽象工厂模式，创建多个工厂类，这样一旦需要增加新的功能，直接增加新的工厂类就可以了，不需要修改之前的代码。
-
-
-
 　　工厂模式分为简单工厂模式、工厂方法模式和抽象工厂模式。
 
 ### 1.2.1. 简单工厂模式
@@ -166,7 +150,34 @@ getInstance() 的性能对应用程序很关键。
 
 ### 1.2.3. 抽象工厂模式
 
+为了更清晰地理解工厂方法模式，需要先引入两个概念：
 
+- **产品等级结构**：产品等级结构即产品的继承结构，如一个抽象类是电视机，其子类有海尔电视机、海信电视机、TCL 电视机，则抽象电视机与具体品牌的电视机之间构成了一个产品等级结构，抽象电视机是父类，而具体品牌的电视机是其子类。
+- **产品族**：在抽象工厂模式中，产品族是指有同一个工厂生产的，位于不同产品等级结构中的一组产品，如海尔电器工厂生产的海尔电视机、海尔电冰箱，海尔电视机位于电视机产品等级结构中，海尔电冰箱位于电冰箱产品等级结构中。
+
+抽象工厂：生产电视机，生产电冰箱两个接口。
+
+具体工厂：海尔工厂，生产电视机接口返回的就是海尔电视机，生产电冰箱接口返回的就是海尔电冰箱。TCL 工厂，生产电视机接口返回的就是 TCL 电视机，生产电冰箱接口返回的就是 TCL 电冰箱。
+
+抽象产品：电视机，电冰箱。
+
+电视机抽象产品：观看接口。
+
+电冰箱抽象产品：存储食物接口。
+
+海尔电视机和 TCL 电视机 实现观看接口。
+
+海尔电冰箱和 TCL 电冰箱实现存储食物接口。
+
+![](image/AbatractFactory.jpg)
+
+
+
+* 抽象工厂模式提供一个创建一系列相关或相互依赖对象的接口，而无须指定它们具体的类。抽象工厂模式又称为 Kit 模式，属于对象创建型模式。
+* 抽象工厂模式包含四个角色：**抽象工厂**用于声明生成抽象产品的方法；**具体工厂**实现了抽象工厂声明的生成抽象产品的方法，生成一组具体产品，这些产品构成了一个产品族，每一个产品都位于某个产品等级结构中；**抽象产品**为每种产品声明接口，在抽象产品中定义了产品的抽象业务方法；**具体产品**定义具体工厂生产的具体产品对象，实现抽象产品接口中定义的业务方法。
+* 抽象工厂模式是所有形式的工厂模式中最为抽象和最具一般性的一种形态。抽象工厂模式与工厂方法模式最大的区别在于：工厂方法模式针对的是一个产品等级结构，而抽象工厂模式则需要面对多个产品等级结构。
+* 抽象工厂模式的主要**优点**是隔离了具体类的生成，使得客户并不需要知道什么被创建，而且每次可以通过具体工厂类创建一个产品族中的多个对象，增加或者替换产品族比较方便，增加新的具体工厂和产品族很方便；主要**缺点**在于增加新的产品等级结构很复杂，需要修改抽象工厂和所有的具体工厂类，对 “ 开闭原则 ” 的支持呈现倾斜性。
+* 抽象工厂模式适用情况包括：一个系统不应当依赖于产品类实例如何被创建、组合和表达的细节；系统中有多于一个的产品族，而每次只使用其中某一产品族；属于同一个产品族的产品将在一起使用；系统提供一个产品类的库，所有的产品以同样的接口出现，从而使客户端不依赖于具体实现。
 
 ## 1.3. 观察者模式
 
