--- a/DesignPatterns/关于设计模式的常见问题.md
+++ b/DesignPatterns/关于设计模式的常见问题.md
@@ -181,6 +181,22 @@ getInstance() 的性能对应用程序很关键。
 
 ## 1.3. 观察者模式
 
+　观察者模式包含如下角色：
+
+* Subject：目标
+* ConcreteSubject：具体目标
+* Observer：观察者
+* ConcreteObserver：具体观察者
+
+![](image/Obeserver.jpg)
+
+* 观察者模式定义对象间的一种一对多依赖关系，使得每当一个对象状态发生改变时，其相关依赖对象皆得到通知并被自动更新。观察者模式又叫做发布 - 订阅模式、模型 - 视图模式、源 - 监听器模式或从属者模式。观察者模式是一种对象行为型模式。
+* 观察者模式包含四个角色：**目标**又称为主题，它是指被观察的对象；**具体目标**是目标类的子类，通常它包含经常发生改变的数据，当它的状态发生改变时，向它的各个观察者发出通知；**观察者**将对观察目标的改变做出反应；在**具体观察者**中维护一个指向具体目标对象的引用，它存储具体观察者的有关状态，这些状态需要和具体目标的状态保持一致。
+* 观察者模式定义了一种一对多的依赖关系，让多个观察者对象同时监听某一个目标对象，当这个目标对象的状态发生改变时，会通知所有观察者对象，使它们能够自动更新。
+* 观察者模式的主要**优点**在于可以实现表示层和数据逻辑层的分离，并在观察目标和观察者之间建立一个抽象的耦合，支持广播通信；其主要**缺点**在于如果一个观察目标对象有很多直接和间接的观察者的话，观察目标会触发它们之间进行循环调用，可能导致系统奔溃。
+* 观察者模式使用情况包括：一个抽象模型有两个方面，其中一个方面依赖于另一个方面；一个对象的改变将导致其他一个或多个对象也发生改变，而不知道具体有多少对象将发生改变；一个对象必须通知其他对象，而并不知道这些对象是谁；需要在系统中创建一个触发链。
+* 在 JDK 的 java.util 包中，提供了 Observable 类以及 Observer 接口，它们构成了 Java 语言对观察者模式的支持。
+
 ## 1.4. 代理模式
 
 * 在代理模式中，要求给某一个对象提供一个代理，并由代理对象控制对原对象的引用。代理模式的英文叫做 Proxy 或 Surrogate，它是一种对象结构型模式。
