--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -52,7 +52,9 @@
 2. 《 两只老虎 》 2020 年 2 月
 3. 《 红星救援 》2020 年 2 月
 4. 《 狐妖小红娘 》-尾生篇 2020 年 3 月
-5. 《 魔法公主 》202 年 3 月
+5. 《 魔法公主 》2020 年 3 月
+6. 《向往的生活》2020 年 6 月 - 2020 年 7 月
+7. 《乘风破浪的姐姐》2020 年 7 月 - 2020 年 8 月 
 
 
 
@@ -182,98 +184,25 @@
 4. 简单选择排序
 5. 堆排序
 6. 冒泡排序
+7. 简历
 
 
 
 #### 计划
 
-1. 查找算法
-   1. 查找算法知识 
-   2. 顺序查找 - 已完成
-   3. 二分查找  - 已完成
-   4. 插值查找 -已完成
-   5. 斐波那契查找 - 已完成
-   6. 二叉树查找 - 已完成
-   7. 平衡查找树之2-3查找树（2-3 Tree） - 已完成
-   8. 平衡查找树之红黑树（Red-Black Tree）- 已完成
-   9. B 树和 B+ 树（B Tree/B+ 树） - 已完成
-   10. 分块查找  - 已完成
-   11. 哈希查找  - 已完成
-2. 排序算法
-   1. 排序算法总结
-   2. 直接插入排序 - 已完成
-   3. 希尔排序 - 已完成
-   4. 简单选择排序 - 已完成
-   5. 堆排序 - 已完成
-   6. 冒泡排序 - 已完成
-   7. 快速排序
-   8. 归并排序 - 已完成
-   9. 基数排序 - 已完成
-3. 常用的五大算法
-   1. 递归 - 已完成
-   2. 回溯算法
-   3. 分治算法 - 已完成
-   4. 贪心算法 - 已完成
-   5. 分支定界法 - 已完成
-4. 红黑树 - 已完成
-5. b树 - 已完成
-6. b+树 - 已完成
-7. 图
-8. Set 集合 - 已完成
-9. 并查集
-10. 堆 - 已完成
-12. 线性表 - 已完成
-13. 栈 
-14. glide 整理
-15. gradle
-16. 数据库
-17. 简历
-18. NIO
-19. 组件化与插件化
-19. 适配
-
-
-
-
-
-
-
-7/15
-
-* 图
-
-7/17
-
-* 并查集
-* 查找算法知识
-
-7/19
-
-* glide 整理
-
-7/21
-
-* 栈
-* 回溯算法
-
-7/22
-
-* 排序算法总结
-
-7/23
-
-* 快速排序
-
-7/25
-
-* gradle
-* 组件化与插件化
-
-7/26
-
-* 数据库
-* NIO
-* 适配
+1. 查找算法知识 
+2. 排序算法总结
+3. 快速排序
+4. 回溯算法
+5. 图
+6. 并查集
+7. 栈 
+8. glide 整理
+9. gradle
+10. 数据库
+11. NIO
+12. 组件化与插件化
+13. 适配
 
 ## 盘点需要做的事情（详细）
 
@@ -285,33 +214,19 @@
    * Messenger - 多进程通信
    * IdleHandler
    * IntentService - Service 的知识里面有提到一些
-   * 事件分发机制 - 已完成
    * Window、Activity、DecorView 以及 ViewRoot 之间的关系
    * AIDL
    * PMS
    * 屏幕适配
-   * 缓存机制 - 已完成
    * 多进程通信
    * ArrayDeque
    * CopyOnWriteArrayList
-   * ConcurrentHashMap - 已完成
    * ArrayMap
    * SpareArray
    * nano ptotobufs
    * 协程
-   * View 绘制流程 - 已完成
-   * WMS - 已完成
-   * AMS - 已完成
-   * 优化 - 已完成
-   * IntentFilter 的匹配规则 - 已完成
-   * ContentProvider - 已完成
-   * AsyncTask - 已完成
-   * Handle、Message、Looper  - 已完成
-   * 进程保活- 守护进程  - 已完成
-   * Fragment - 已完成
 2. 开源库
    * Glide
-   * LRUCache - 已完成
    * Picasso
    * eventBus
    * ButterKnife
@@ -319,18 +234,6 @@
    * XWalkView
    * 插件化
    * 热修复
-   * RxJava - 已完成
-   * Retrofit 源码分析 - 已完成
-   * OkHttp - 已完成
-   * RabbitMQ - 已完成
-3. 网络
-   * 计算机网络知识基础 - 已完成
-   * HTTPS - 应用层协议 - 已完成
-   * TCP与UDP - 传输层协议 - 已完成
-   * Socket - 已完成
-   * ip 协议 - 已完成
-   * ipv4 和 ipv6 - 已完成
-   * 常见的网络攻击方式 - 已完成
 4. Java
    * 线程
    * hashCode
@@ -343,14 +246,6 @@
    * transient
    * CopyOnWriteArrayList
    * PriorityQueue
-   * ReentrantLock - 已完成
-   * Condition - 已完成
-   * ConcurrentHashMap - 已完成
-   * 死锁 - 已完成
-   * 锁 - 已完成
-   * threadLocal原理 - 已完成
-   * volatile - 数据从主内存直接获取 - 已完成
-   * synchronized - 同步 - 已完成
 5. 数据结构
    * 链表与队列
    * 树
@@ -359,8 +254,6 @@
    * 查找算法
 6. 其他
    * Gradle
-   * 操作系统知识 - 已完成
-   * 责任链模式 - 完成
 
 ## 后续
 
@@ -416,14 +309,6 @@
 
 20. java 读写文件的几种方式
 
-24. 泛型 - 已完成
-
-25. 反射 - 已完成
-
-26. 代理 - 已完成
-
-24. 注解 - 已完成
-
 25. Vector
 
 26. SortedMap / TreeMap
@@ -434,7 +319,9 @@
 
 29. Protocal buffers 
 
-30. ProGuard 
+26. ProGuard 
+
+27. [ContentProvider 之文件储存](https://blog.csdn.net/kaiwii/article/details/7780593)
 
 
 
