--- a/plan/2020年计划.md
+++ b/plan/2020年计划.md
@@ -325,6 +325,8 @@
 
 28. ActionBarDrawerToggle 
 
+29. LocalBroadcastManager 
+
 
 
 [这是一份面向Android开发者的复习指南](https://www.jianshu.com/p/b3c1b9c6dd40)
