--- a/Android/架构与设计模式/设计模式选择.md
+++ b/Android/架构与设计模式/设计模式选择.md
@@ -1,6 +1,7 @@
 # 设计模式选择
 
-## MVC
+# 1. MVC
+
 　　MVC 框架模式最早由 Trygve Reenskaug 于 1978 年在 Smalltalk-80 系统上首次提出。经过了这么多年的发展，当然会演变出不同的版本，但核心没变依旧还是三层模型 Model-View-Control。
 
 ![](image/mvc.png)
@@ -14,37 +15,44 @@
 
 　　模型层（Model）针对业务模型，建立的数据结构和相关的类，它主要负责网络请求、数据库处理、I/O 操作。
 
-#### 总结
+## 1.1. 总结
+
 * 具有一定的分层，mode 彻底解耦，controller 和 view 并没有解耦。
 * 层与层之间的交互尽量使用回调或者使用消息机制去完成，尽量避免直接持有。
 * controller 和 view 在 android 中无法做到彻底分离，但在代码逻辑层面一定要分清。
 * 业务逻辑被放置在 mode 层，能够更好的复用和修改增加业务。
 
-## MVP
+# 2. MVP
+
 　　MVP 和 MVC 很像，MVP 也是三层，唯一的差别是 Mode 和 View 之间不进行通讯，都是通过 Presenter 完成。MVC 有一个缺点就是在 Android 中由于 Activity 的存在，Controller 和 View 很难做到完全解耦，但在 MVP 中就可以很好的解决这个问题。
 
 ![](image/mvp.png)
 
 　　MVP 中也有一个 Contract 类，Contract 在 MVP 中是一个契约类，契约类用于定义同一个界面的 view 接口和 presenter 的具体实现，好处是通过规范的方法命名和注释可以清晰的看到整个页面的逻辑。
 
-#### 总结
-　　通过引入接口 BaseActivity，让相应的视图组件如 Activity、Fragment 去实现 BaeView，实现了视图层的独立，通过中间层 Preseter 实现了 Model 和 View 的完全解耦。MVP 彻底解决了 MVC 中 View 和 Controller 傻傻分不清楚的问题，但是随着业务逻辑的增加，一个页面可能会非常复杂，UI 的改变是非常多的，会有非常多的 case，这样就会造成 View 接口会很庞大。
+## 2.1. 总结
 
-## MVVM
+　　通过引入接口 BaseActivity，让相应的视图组件如 Activity、Fragment 去实现 BaseView，实现了视图层的独立，通过中间层 Preseter 实现了 Model 和 View 的完全解耦。MVP 彻底解决了 MVC 中 View 和 Controller 傻傻分不清楚的问题，但是随着业务逻辑的增加，一个页面可能会非常复杂，UI 的改变是非常多的，会有非常多的 case，这样就会造成 View 接口会很庞大。
+
+# 3. MVVM
+
 　　MVP 会随着业务逻辑的增加、UI 的改变多的情况下，会有非常多的跟 UI 相关的 case，这样就会造成 View 的接口会很庞大。而 MVVM 就解决了这个问题，通过双向绑定的机制，实现数据和 UI 内容，只要想改其中一方，另一方都能及时更新的一种设计理念，这样就省去了很多在 View 层中写很多 case 的情况，只需要改变数据就行。MVVM 的设计图：
 ![](image/MVVM.png)
 
 　　一般情况就这两种情况，看起来跟 MVP 好像没什么差别，其实区别还是挺大的，在 MVP 中 View 和 Presenter 要相互持有，方便调用对方，而在 MVP 中 View 和 ViewModel 通过 Binding 进行关联，他们之间的关联处理通过 DataBinding 完成。
 
-#### MVVM 与 DataBinding 的关系
+## 3.1. MVVM 与 DataBinding 的关系
+
 　　MVVM 是一种思想，DataBinding 是谷歌推出的方便实现 MVVM 的工具。在 google 推出 DataBinding 之前，因为 xml layout 功能较弱，想实现 MVVM 非常困难，而 DataBinding 的出现可以很方便的实现 MVVM。
 
 　　DataBinding 是实现视图和数据双向绑定的工具。
 
-#### 总结
+## 3.2. 总结
+
 　　看起来 MVVM 很好的解决了 MVC 和 MVP 的不足，但是由于数据和视图的双向绑定，导致出现问题时不太好定位来源，有可能数据问题导致，也有可能业务逻辑中对视图属性的修改导致。如果项目中打算用 MVVM 的话可以考虑使用官方的架构组件 ViewModel、LiveData、DataBinding 去实现 MVVM 。
 
-## 关于 MVC、MVP、MVVM 如何选择
+# 4. 关于 MVC、MVP、MVVM 如何选择
+
 　　在 MVP 中要实现根据业务逻辑和页面逻辑做很多 Present 和 View 的具体实现，如果这些 case 太多，会导致代码的可读性变差，但是通过引入 contract 契约类，会让业务逻辑变得清晰许多。因此不管是用哪种设计模式，只要运用得当，都可以达到想要的结果。
 
 　　简单建议：
@@ -52,8 +60,9 @@
 2. 对于偏向展示型的 app，绝大多数业务逻辑都在后端，app 主要功能就是展示数据、交互等，建议使用 mvvm。
 3. 对于工具类或者需要写很多业务逻辑 app，使用 mvp 或者 mvvm 都可。
 
-## 参考文章
-[MVC、MVP、MVVM，我到底该怎么选？](https://juejin.im/post/5b3a3a44f265da630e27a7e6)
+# 5. 参考文章
+
+1. [MVC、MVP、MVVM，我到底该怎么选？](https://juejin.im/post/5b3a3a44f265da630e27a7e6)
 
 
 
